wow, too much stuff to list, but mainly coded out css, put question values in arrays, and added feature that returns green text for correct answers and red text for incorrect answers

--- a/styles.css
+++ b/styles.css
@@ -16,3 +16,12 @@ p {
   font-family: Impact;
   color: #547190;
 }
+.right {
+  font-family: Verdana;
+  font-size: 40px;
+  color: #07cb07;
+}
+.wrong {
+  font-family: Impact;
+  color: #f31414;
+}
